--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- ===== CSS ===== -->
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
 
         <!-- ===== BOX ICONS ===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-        <link rel="icon" href="assets/img/icon.jpg" type="image/icon type">
+        <link rel="icon" href="img/icon.jpg" type="image/icon type">
 
         <title>Vishal Rathod | Web Developer</title>
     </head>
