--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
                     </div>
 
-                    <img src="assets/img/perfil1.png" alt="" class="home__img">
+                    <img src="img/perfil1.png" alt="" class="home__img">
                 </div>
             </section>
             
@@ -57,7 +57,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/perfil.png" alt="">
+                        <img src="img/perfil.png" alt="">
                     </div>
 
                     <div>
@@ -214,6 +214,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--===== MAIN JS =====-->
-        <script src="assets/js/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
