--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="skills__img">
-                        <img src="assets/img/skill.jpg" alt="">
+                        <img src="img/skill.jpg" alt="">
                     </div>
                 </div>
             </section>
@@ -106,42 +106,42 @@
 
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="img/work1.jpg" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <img src="img/work2.jpg" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <img src="img/work3.jpg" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                        <img src="img/work4.jpg" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work5.jpg" alt="">
+                        <img src="img/work5.jpg" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <img src="img/work6.jpg" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name">View details</a>
