--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Vishal Rathod</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/rathodvishal_07" class="twitter"><i class="bx bxl-twitter"></i></a>
