--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+91 95868 71098</p>
+                <h4>LinkedIn:</h4>
+                <p><a href = "https://www.linkedin.com/in/vishal-rathod-b925201b4/">Click Here</a></p>
               </div>
               <iframe title="My Location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.635878094502!2d72.5155060144418!3d23.00041347292882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e9ad20fb72ebf%3A0x8f41b4b465bb7b9a!2sShri%20Krishna%20Nagari%2C%20Shrinand%20Nagar%2C%20Juhapura%2C%20Ahmedabad%2C%20Gujarat%20380051!5e0!3m2!1sen!2sin!4v1613923862276!5m2!1sen!2sin" width="600" height="450" style="border:0; width: 100%; height: 290px;" allowfullscreen="" loading="lazy"></iframe>
               <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>-->
