Updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               ><i class="bx bxl-github"></i
             ></a>
             <a
-              href="https://www.linkedin.com/in/vishal-rathod-b925201b4/"
+              href="https://www.linkedin.com/in/rathodvishald/"
               class="linkedin"
               ><i class="bx bxl-linkedin"></i
             ></a>
