--- a/index.html
+++ b/index.html
@@ -53,25 +53,34 @@
           />
           <h1 class="text-light"><a href="index.html">Vishal Rathod</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="https://twitter.com/rathodvishal_07" class="twitter"
+            <a
+              href="https://twitter.com/rathodvishal_07"
+              class="twitter"
+              target="_blank"
               ><i class="bx bxl-twitter"></i
             ></a>
             <a
               href="https://www.facebook.com/profile.php?id=100012072824442"
               class="facebook"
+              target="_blank"
               ><i class="bx bxl-facebook"></i
             ></a>
             <a
               href="https://www.instagram.com/itzvishalrathod/"
               class="instagram"
+              target="_blank"
               ><i class="bx bxl-instagram"></i
             ></a>
-            <a href="https://github.com/vishal-rathod-07" class="github"
-              ><i class="bx bxl-github"></i
+            <a
+              href="https://github.com/vishal-rathod-07"
+              class="github"
+              target="_blank"
+              ><i class="bx bxl-github"> </i
             ></a>
             <a
               href="https://www.linkedin.com/in/rathodvishald/"
               class="linkedin"
+              target="_blank"
               ><i class="bx bxl-linkedin"></i
             ></a>
           </div>
