--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
+
+    <!--Bootstrap Files-->
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
   <body>
@@ -622,61 +627,42 @@
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
               <form
-                action="https://formsubmit.co/rvd31305@gmail.com"
-                method="post"
-                role="form"
+                data-bss-recipient="0398b28d3fb5abd37e430e55325da401"
                 class="php-email-form"
               >
-                <div class="row">
-                  <div class="form-group col-md-6">
-                    <label for="name">Your Name</label>
-                    <input
-                      type="text"
-                      name="Name"
-                      class="form-control"
-                      id="name"
-                      required
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <label for="name">Your Email</label>
-                    <input
-                      type="email"
-                      class="form-control"
-                      name="Email"
-                      id="email"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="name">Subject</label>
+                <h2 class="text-center">Contact us</h2>
+                <div class="mb-3">
                   <input
-                    type="text"
                     class="form-control"
-                    name="Subject"
-                    id="subject"
-                    required
+                    type="text"
+                    name="name"
+                    placeholder="Your Name"
+                    required=""
                   />
                 </div>
-                <div class="form-group">
-                  <label for="name">Message</label>
+                <div class="mb-3">
+                  <input
+                    class="form-control"
+                    type="email"
+                    name="email"
+                    placeholder="Your Email"
+                    required=""
+                  />
+                </div>
+                <div class="mb-3">
                   <textarea
                     class="form-control"
-                    name="Message"
-                    rows="10"
-                    required
+                    name="message"
+                    placeholder="Message"
+                    rows="14"
+                    required=""
+                    minlength="10"
                   ></textarea>
                 </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">
-                    Your message has been sent. Thank you!
-                  </div>
-                </div>
-                <div class="text-center">
-                  <button type="submit">Send Message</button>
+                <div class="mb-3 text-center">
+                  <button class="btn btn-primary" type="submit">
+                    Send Message
+                  </button>
                 </div>
               </form>
             </div>
@@ -720,6 +706,8 @@
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/smart-forms.min.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
