Updated linked in profile link

--- a/index.html
+++ b/index.html
@@ -606,8 +606,7 @@
                   <i class="bi bi-phone"></i>
                   <h4>LinkedIn:</h4>
                   <p>
-                    <a
-                      href="https://www.linkedin.com/in/vishal-rathod-b925201b4/"
+                    <a href="https://www.linkedin.com/in/rathodvishald"
                       >Click Here</a
                     >
                   </p>
