Updated LinkedIn Profile

--- a/index.html
+++ b/index.html
@@ -606,8 +606,10 @@
                   <i class="bi bi-phone"></i>
                   <h4>LinkedIn:</h4>
                   <p>
-                    <a href="https://www.linkedin.com/in/rathodvishald"
-                      >Click Here</a
+                    <a
+                      href="https://www.linkedin.com/in/rathodvishald"
+                      target="_blank"
+                      >Visit LinkedIn</a
                     >
                   </p>
                 </div>
