--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1 class="text-light"><a href="index.html">Vishal Rathod</a></h1>
           <div class="social-links mt-3 text-center">
             <a
-              href="https://twitter.com/rathodvishal_07"
+              href="https://twitter.com/itzvishalrathod"
               class="twitter"
               target="_blank"
               ><i class="bx bxl-twitter"></i
@@ -614,15 +614,17 @@
                   </p>
                 </div>
                 <iframe
-                  title="My Location"
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.635878094502!2d72.5155060144418!3d23.00041347292882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e9ad20fb72ebf%3A0x8f41b4b465bb7b9a!2sShri%20Krishna%20Nagari%2C%20Shrinand%20Nagar%2C%20Juhapura%2C%20Ahmedabad%2C%20Gujarat%20380051!5e0!3m2!1sen!2sin!4v1613923862276!5m2!1sen!2sin"
-                  width="600"
-                  height="450"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235013.70717427065!2d72.43965389034544!3d23.0204977727074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e848aba5bd449%3A0x4fcedd11614f6516!2sAhmedabad%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1645723588328!5m2!1sen!2sin"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen=""
                   loading="lazy"
                 ></iframe>
-                <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>-->
+                <!-- <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                  frameborder="0"
+                  style="border: 0; width: 100%; height: 290px"
+                  allowfullscreen
+                ></iframe> -->
               </div>
             </div>
 
