--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               </div>
               <div class="resume-item">
                 <h4>S.S.C.</h4>
-                <h5>2017 - 2020</h5>
+                <h5>March 2015</h5>
                 <p>
                   <em>R. R. Dwivedi High School</em>
                 </p>
