Added meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Vishal Rathod | Software Engineer</title>
+    <meta name="robots" content="index,follow">
+    <meta name="googlebot" content="index,follow">
+    <meta name="description" content="Welcome to Vishal Rathod's Profile">
+    <meta property="og:url" content="vishal-rathod-07.github.io">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Vishal Rathod | Software Engineer">
+    <meta property="og:description" content="Welcome to Vishal Rathod's Profile">
+    <meta property="og:image" content="/assets/img/profile-img.png">
+    <meta property="og:image:alt" content="Vishal Rathod">
+    <meta property="og:site_name" content="Vishal Rathod">
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-
-    <title>Vishal Rathod | Software Engineer</title>
-    <meta content="Personal Profile" name="description" />
-    <meta content="Software Engineer" name="keywords" />
+    <meta name="keywords" content="Vishal Rathod, Vishal, Software Engineer, HTML, CSS, Web Developer"  />
 
     <!-- Favicons -->
     <link href="assets/img/favicon.jpg" rel="icon" />
