--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           I'm
           <span
             class="typed"
-            data-typed-items="Software Engineer., Freelancer., Programmer."
+            data-typed-items="Software Engineer., Front-End Developer."
           ></span>
         </p>
       </div>
@@ -163,9 +163,7 @@
           <div class="section-title">
             <h2>About</h2>
             <p>
-              Self-Motivated and Result-Driven Software Engineer with Excellency
-              in Designing, Developing and Managing Complex Websites and Ability
-              to Perform well in a Team.
+              A Frontend Developer with a passion for creating visually stunning and user-friendly web experiences. Skilled in HTML, CSS, JavaScript, React.js and Next.js. I am able to bring a keen eye for design and deep understanding of web development to every project. I have experience with both client-side and server-side rendering using Next.js, allowing me to create fast and efficient websites. I am a quick learner and always stay up-to-date with the latest web technologies. I have a track record of delivering high-quality code and am always ready to take on new challenges. My goal is to push the boundaries of what's possible on the web and create exceptional user experiences. I am a team player and enjoy collaborating with others to bring ideas to life. Hire me to elevate your web presence and create a visually stunning and high-performance online experience for your users.
             </p>
           </div>
 
@@ -189,8 +187,8 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong
-                        >Website:<a href="https://vishal-rathod-07.github.io/">
-                          vishal-rathod-07.github.io</a
+                        >Website:<a href="https://vishalrathod.me/">
+                          vishalrathod.me</a
                         ></strong
                       >
                     </li>
@@ -205,12 +203,12 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                      <span>21</span>
+                      <span>22</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Degree:</strong>
-                      <span>Master currently Pursuing</span>
+                      <span>M.Sc (CA & IT)</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -220,10 +218,7 @@
                 </div>
               </div>
               <p>
-                Strong engineering professional with a Bachelor of Science
-                focused in Computer Applications & Information Technology from
-                K. S. School of Business Management, Gujarat University,
-                Gujarat.
+                Frontend Developer | Building seamless web experiences with HTML, CSS, JavaScript, React.js, Next.js
               </p>
             </div>
           </div>
